<resources>
    <string name="app_name">FindDepro</string>

    <!--홈-->
    <string name="homeTitle">홈</string>
    <string name="noticeTitle">공지사항</string>
    <string name="scheduleTitle">일정</string>


    <!--출석-->
    <string name="attendanceTitle">출석</string>
    <string name="totalStr">전체 출석수</string>
    <string name="attendanceStr">현재 출석 횟수</string>
    <string name="absenceStr">결석 횟수</string>
    <string name="remainingStr">앞으로 남은 출석일</string>
    <string name="checkAttendanceStr">출석확인</string>

    <!--투표-->
    <string name="voteTitle">투표</string>

    <!--게시판-->
    <string name="feedTitle">피드</string>

    <!--설정-->
    <string name="settingTitle">설정</string>
    <string name="settingPushAlarmStr">푸쉬 알림</string>
    <string name="settingLikeStr">좋아요한 게시글</string>
    <string name="settingProgramInfoStr">프로그램 정보</string>
    <string name="settingWithdrawalStr">회원 탈퇴</string>

</resources>